@@ -41,6 +41,7 @@ bool parseDebug = true;
 int layerSettings = 0xff00;
 int layerEnable = 0xff00;
 bool speedHack = false;
+int cpuSaveType = 0;
 
 u8 *bios = NULL;
 u8 *rom = NULL;
