@@ -584,13 +584,18 @@
 #define ID_OPTIONS_VIDEO_FRAMESKIP_7    40166
 #define ID_OPTIONS_VIDEO_FRAMESKIP_8    40167
 #define ID_OPTIONS_VIDEO_FRAMESKIP_9    40168
+#define ID_OPTIONS_EMULATOR_SAVETYPE_AUTOMATIC 40169
+#define ID_OPTIONS_EMULATOR_SAVETYPE_EEPROM 40170
+#define ID_OPTIONS_EMULATOR_SAVETYPE_SRAM 40171
+#define ID_OPTIONS_EMULATOR_SAVETYPE_FLASH 40172
+#define ID_OPTIONS_EMULATOR_SAVETYPE_EEPROMSENSOR 40173
 
 // Next default values for new objects
 // 
 #ifdef APSTUDIO_INVOKED
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        139
-#define _APS_NEXT_COMMAND_VALUE         40169
+#define _APS_NEXT_COMMAND_VALUE         40174
 #define _APS_NEXT_CONTROL_VALUE         1235
 #define _APS_NEXT_SYMED_VALUE           102
 #endif
